--- a/ClusterPipline.yaml
+++ b/ClusterPipline.yaml
@@ -16,15 +16,12 @@ variables:
   TF_VERSION: "1.6.6"
   AWS_REGION: "us-east-1"
   TF_STATE_BUCKET: "nti-terraform-states"
-  TF_STATE_KEY: "eks/terraform.tfstate"
+  TF_STATE_KEY: "eks/nonprod/terraform.tfstate"
 
-# -----------------------------
-# Use EC2 self-hosted agent
-# -----------------------------
 pool:
-  name: Self hosted pools      # اسم الـ Agent Pool في Azure DevOps
+  name: Self hosted pools
   demands:
-    - agent.name -equals mo-saleh   # اسم الـ agent على الـ EC2
+    - agent.name -equals mo-saleh
 
 stages:
 - stage: Terraform
@@ -34,9 +31,6 @@ stages:
     displayName: Terraform Apply or Destroy
     steps:
 
-    # -------------------------
-    # Install Terraform
-    # -------------------------
     - task: TerraformInstaller@1
       displayName: Install Terraform
       inputs:
@@ -46,31 +40,31 @@ stages:
     # Terraform Init (S3 backend)
     # -------------------------
     - script: |
+        cd Cluster
         terraform init \
           -backend-config="bucket=$(TF_STATE_BUCKET)" \
           -backend-config="key=$(TF_STATE_KEY)" \
           -backend-config="region=$(AWS_REGION)"
       displayName: Terraform Init
 
-    # -------------------------
-    # Terraform Validate
-    # -------------------------
-    - script: terraform validate
+    - script: |
+        cd Cluster
+        terraform validate
       displayName: Terraform Validate
 
-    # -------------------------
-    # Terraform Plan
-    # -------------------------
-    - script: terraform plan -out=tfplan
+    - script: |
+        cd Cluster
+        terraform plan -out=tfplan
       displayName: Terraform Plan
 
-    # -------------------------
-    # Terraform Apply OR Destroy
-    # -------------------------
     - ${{ if eq(parameters.action, 'apply') }}:
-      - script: terraform apply -auto-approve tfplan
+      - script: |
+          cd Cluster
+          terraform apply -auto-approve tfplan
         displayName: Terraform Apply
 
     - ${{ if eq(parameters.action, 'destroy') }}:
-      - script: terraform destroy -auto-approve
+      - script: |
+          cd Cluster
+          terraform destroy -auto-approve
         displayName: Terraform Destroy
