--- a/IngressPipline.yaml
+++ b/IngressPipline.yaml
@@ -10,33 +10,31 @@ pipeline {
     }
 
     environment {
-        TF_VERSION       = '1.6.6'
-        WORK_DIR         = 'Ingress'
         AWS_DEFAULT_REGION = 'us-east-1'
-        TF_STATE_BUCKET  = 'nti-terraform-states-1'
-        TF_STATE_KEY     = 'eks/nonprod/terraform.tfstate'
+        TF_STATE_BUCKET   = 'nti-terraform-states'
+        TF_STATE_KEY      = 'eks/terraform.tfstate'
     }
 
     stages {
 
         stage('Checkout Code') {
             steps {
-                checkout scm
+                git(
+                    url: 'https://github.com/12salh/EKS-Cluster-Terraform.git',
+                    branch: 'main'
+                )
             }
         }
 
         stage('Terraform Init') {
             steps {
-                withCredentials([[
-                    $class: 'AmazonWebServicesCredentialsBinding',
-                    credentialsId: 'aws_cred'
-                ]]) {
-                    dir("${WORK_DIR}") {
+                withCredentials([[ $class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws_cred' ]]) {
+                    dir('Ingress') {
                         sh '''
-                          terraform init \
-                            -backend-config="bucket=${TF_STATE_BUCKET}" \
-                            -backend-config="key=${TF_STATE_KEY}" \
-                            -backend-config="region=${AWS_DEFAULT_REGION}"
+                        terraform init \
+                          -backend-config="bucket=${TF_STATE_BUCKET}" \
+                          -backend-config="key=${TF_STATE_KEY}" \
+                          -backend-config="region=${AWS_DEFAULT_REGION}"
                         '''
                     }
                 }
@@ -44,15 +42,10 @@ pipeline {
         }
 
         stage('Terraform Plan') {
-            when {
-                expression { params.ACTION == 'apply' }
-            }
+            when { expression { params.ACTION == 'apply' } }
             steps {
-                withCredentials([[
-                    $class: 'AmazonWebServicesCredentialsBinding',
-                    credentialsId: 'aws_cred'
-                ]]) {
-                    dir("${WORK_DIR}") {
+                withCredentials([[ $class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws_cred' ]]) {
+                    dir('Ingress') {
                         sh 'terraform plan -out=tfplan'
                     }
                 }
@@ -60,35 +53,46 @@ pipeline {
         }
 
         stage('Terraform Apply') {
-            when {
-                expression { params.ACTION == 'apply' }
-            }
+            when { expression { params.ACTION == 'apply' } }
             steps {
-                withCredentials([[
-                    $class: 'AmazonWebServicesCredentialsBinding',
-                    credentialsId: 'aws_cred'
-                ]]) {
-                    dir("${WORK_DIR}") {
+                withCredentials([[ $class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws_cred' ]]) {
+                    dir('Ingress') {
                         sh 'terraform apply -auto-approve tfplan'
                     }
                 }
             }
         }
 
-        stage('Terraform Destroy') {
-            when {
-                expression { params.ACTION == 'destroy' }
-            }
+        stage('Install Argo CD & Ingress') {
             steps {
-                withCredentials([[
-                    $class: 'AmazonWebServicesCredentialsBinding',
-                    credentialsId: 'aws_cred'
-                ]]) {
-                    dir("${WORK_DIR}") {
+                dir('Ingress') {
+                    sh '''
+                    # تثبيت Argo CD
+                    kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
+                    kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+                    kubectl patch svc argocd-server -n argocd -p '{"spec":{"type":"ClusterIP"}}'
+
+                    # قراءة NLB DNS تلقائياً من Nginx Ingress Controller
+                    NLB_DNS=$(kubectl get svc nginx-ingress-controller -n ingress-nginx -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
+                    echo "Using NLB DNS: $NLB_DNS"
+
+                    # استبدال host في Argo CD Ingress وتطبيقه
+                    sed "s|<NLB-DNS-HOSTNAME>|$NLB_DNS|g" argocd-ingress.yaml | kubectl apply -f -
+                    '''
+                }
+            }
+        }
+
+        stage('Terraform Destroy') {
+            when { expression { params.ACTION == 'destroy' } }
+            steps {
+                withCredentials([[ $class: 'AmazonWebServicesCredentialsBinding', credentialsId: 'aws_cred' ]]) {
+                    dir('Ingress') {
                         sh 'terraform destroy -auto-approve'
                     }
                 }
             }
         }
+
     }
 }
