--- a/IngressPipline.yaml
+++ b/IngressPipline.yaml
@@ -12,7 +12,7 @@ pipeline {
     environment {
         AWS_DEFAULT_REGION = 'us-east-1'
         TF_STATE_BUCKET   = 'nti-terraform-states-1'
-        TF_STATE_KEY      = 'eks/terraform.tfstate'
+        TF_STATE_KEY      = 'eks/nonprod/terraform.tfstate'
     }
 
     stages {
